[package]
name = "apas-verus"
version = "0.1.0"
edition = "2024"

[package.metadata.verus]
verify = true

[features]
default = []
# Build only experiments (skip chapter modules)
experiments_only = []
# Isolate: only include foundation + explicitly enabled chapters (+ their deps).
# Usage: validate.sh isolate Chap55  →  foundations + Chap55 + transitive deps
isolate = []
Chap02 = []
Chap03 = []
Chap05 = ["Chap02"]
Chap06 = ["Chap05"]
Chap11 = ["Chap02"]
Chap12 = ["Chap02"]
Chap17 = []
Chap18 = ["Chap02"]
Chap19 = ["Chap02"]
Chap21 = ["Chap18", "Chap19"]
Chap23 = []
Chap26 = ["Chap02", "Chap18"]
Chap27 = ["Chap02", "Chap19"]
Chap28 = ["Chap19"]
Chap30 = []
Chap35 = ["Chap02", "Chap18", "Chap19"]
Chap36 = ["Chap19"]
Chap37 = ["Chap02", "Chap18", "Chap19", "Chap23"]
Chap38 = ["Chap18"]
Chap39 = ["Chap18"]
Chap40 = ["Chap18"]
Chap41 = ["Chap18", "Chap19", "Chap37", "Chap38"]
Chap42 = ["Chap02", "Chap19", "Chap41"]
Chap43 = ["Chap18", "Chap19", "Chap37", "Chap38", "Chap41", "Chap42"]
Chap44 = ["Chap19", "Chap37", "Chap41", "Chap42"]
Chap45 = ["Chap19", "Chap37"]
Chap47 = ["Chap18"]
Chap49 = ["Chap02", "Chap18", "Chap19"]
Chap50 = ["Chap02", "Chap30"]
Chap51 = ["Chap02", "Chap18", "Chap19"]
Chap52 = ["Chap18", "Chap19", "Chap37", "Chap38", "Chap41", "Chap43"]
Chap53 = ["Chap37", "Chap38", "Chap41"]
Chap54 = ["Chap02", "Chap18", "Chap19"]
Chap55 = ["Chap19", "Chap37", "Chap41"]
Chap56 = ["Chap19"]
Chap57 = ["Chap05", "Chap06", "Chap45", "Chap56"]
Chap58 = ["Chap05", "Chap06", "Chap56"]
Chap59 = ["Chap05", "Chap06", "Chap19", "Chap56", "Chap57", "Chap58"]
Chap61 = ["Chap05", "Chap06", "Chap19"]
Chap62 = ["Chap05", "Chap06", "Chap19"]
Chap63 = ["Chap05", "Chap06", "Chap62"]
Chap64 = ["Chap05", "Chap06", "Chap62"]
Chap65 = ["Chap05", "Chap06", "Chap45"]
Chap66 = ["Chap05"]

[dependencies]
vstd = "0.0.0-2025-08-12-1837"
derive_more = { version = "1.0", features = ["display"] }
verus_state_machines_macros = "0.0.0-2025-11-23-0053"
rand = "0.10.0"

[lib]
path = "src/lib.rs"

[[test]]
name = "TestInsertionSortStEph"
path = "tests/Chap03/TestInsertionSortStEph.rs"

[[test]]
name = "TestSetStEph"
path = "tests/Chap05/TestSetStEph.rs"

[[test]]
name = "TestRelationStEph"
path = "tests/Chap05/TestRelationStEph.rs"

[[test]]
name = "TestMappingStEph"
path = "tests/Chap05/TestMappingStEph.rs"

[[test]]
name = "TestKleeneStPer"
path = "tests/Chap05/TestKleeneStPer.rs"

[[test]]
name = "TestSetMtEph"
path = "tests/Chap05/TestSetMtEph.rs"

[[test]]
name = "test_total_order"
path = "tests/vstdplus/test_total_order.rs"

[[test]]
name = "test_partial_order"
path = "tests/vstdplus/test_partial_order.rs"

[[test]]
name = "test_feq"
path = "tests/vstdplus/test_feq.rs"

# Orphaned: test_checked_nat_with_checked_view

[[test]]
name = "TestDirGraphStEph"
path = "tests/Chap06/TestDirGraphStEph.rs"

[[test]]
name = "TestDirGraphMtEph"
path = "tests/Chap06/TestDirGraphMtEph.rs"

[[test]]
name = "TestUnDirGraphStEph"
path = "tests/Chap06/TestUnDirGraphStEph.rs"

[[test]]
name = "TestLabDirGraphStEph"
path = "tests/Chap06/TestLabDirGraphStEph.rs"

[[test]]
name = "TestLabUnDirGraphStEph"
path = "tests/Chap06/TestLabUnDirGraphStEph.rs"

[[test]]
name = "TestUnDirGraphMtEph"
path = "tests/Chap06/TestUnDirGraphMtEph.rs"

# TestLabDirGraphMtEph and TestLabUnDirGraphMtEph exist on disk but are stale
# (reference methods no longer in the Mt API). Need rework.

[[test]]
name = "TestWeightedDirGraphStEphU32"
path = "tests/Chap06/TestWeightedDirGraphStEphU32.rs"

[[test]]
name = "TestWeightedDirGraphStEphU8"
path = "tests/Chap06/TestWeightedDirGraphStEphU8.rs"

[[test]]
name = "TestWeightedDirGraphStEphI8"
path = "tests/Chap06/TestWeightedDirGraphStEphI8.rs"

[[test]]
name = "TestWeightedDirGraphStEphI16"
path = "tests/Chap06/TestWeightedDirGraphStEphI16.rs"

[[test]]
name = "TestWeightedDirGraphStEphI32"
path = "tests/Chap06/TestWeightedDirGraphStEphI32.rs"

[[test]]
name = "TestWeightedDirGraphStEphI64"
path = "tests/Chap06/TestWeightedDirGraphStEphI64.rs"

[[test]]
name = "TestWeightedDirGraphStEphI128"
path = "tests/Chap06/TestWeightedDirGraphStEphI128.rs"

[[test]]
name = "TestWeightedDirGraphStEphIsize"
path = "tests/Chap06/TestWeightedDirGraphStEphIsize.rs"

[[test]]
name = "TestWeightedDirGraphStEphU16"
path = "tests/Chap06/TestWeightedDirGraphStEphU16.rs"

[[test]]
name = "TestWeightedDirGraphStEphU64"
path = "tests/Chap06/TestWeightedDirGraphStEphU64.rs"

[[test]]
name = "TestWeightedDirGraphStEphU128"
path = "tests/Chap06/TestWeightedDirGraphStEphU128.rs"

[[test]]
name = "TestWeightedDirGraphStEphUsize"
path = "tests/Chap06/TestWeightedDirGraphStEphUsize.rs"

[[test]]
name = "TestLabDirGraphMtEph"
path = "tests/Chap06/TestLabDirGraphMtEph.rs"

[[test]]
name = "TestLabUnDirGraphMtEph"
path = "tests/Chap06/TestLabUnDirGraphMtEph.rs"

# [[test]]  # uses apas_ai crate, no source module exists
# name = "TestWeighedDirGraphMtEphFloat"
# path = "tests/Chap06/TestWeighedDirGraphMtEphFloat.rs"

# [[test]]  # uses apas_ai crate, no source module exists
# name = "TestWeighedDirGraphMtEphInt"
# path = "tests/Chap06/TestWeighedDirGraphMtEphInt.rs"

# [[test]]  # uses apas_ai crate, no source module exists
# name = "TestWeighedDirGraphStEphFloat"
# path = "tests/Chap06/TestWeighedDirGraphStEphFloat.rs"

# [[test]]  # uses apas_ai crate, no source module exists
# name = "TestWeighedDirGraphStEphInt"
# path = "tests/Chap06/TestWeighedDirGraphStEphInt.rs"

# [[test]]  # uses apas_ai crate, no source module exists
# name = "TestWeighedUnDirGraphMtEphFloat"
# path = "tests/Chap06/TestWeighedUnDirGraphMtEphFloat.rs"

# [[test]]  # uses apas_ai crate, no source module exists
# name = "TestWeighedUnDirGraphMtEphInt"
# path = "tests/Chap06/TestWeighedUnDirGraphMtEphInt.rs"

# [[test]]  # uses apas_ai crate, no source module exists
# name = "TestWeighedUnDirGraphStEphFloat"
# path = "tests/Chap06/TestWeighedUnDirGraphStEphFloat.rs"

# [[test]]  # uses apas_ai crate, no source module exists
# name = "TestWeighedUnDirGraphStEphInt"
# path = "tests/Chap06/TestWeighedUnDirGraphStEphInt.rs"

[[test]]
name = "TestParaPairs"
path = "tests/Chap11/TestParaPairs.rs"

[[test]]
name = "TestFibonacciMt"
path = "tests/Chap11/TestFibonacciMt.rs"

[[test]]
name = "test_threads_plus"
path = "tests/Chap02/test_threads_plus.rs"

[[test]]
name = "test_fibonacci_scheduler"
path = "tests/Chap02/test_fibonacci_scheduler.rs"

[[test]]
name = "test_hf_scheduler"
path = "tests/Chap02/test_hf_scheduler.rs"

[[test]]
name = "test_exercise12_1"
path = "tests/Chap12/test_exercise12_1.rs"

[[test]]
name = "test_exercise12_2"
path = "tests/Chap12/test_exercise12_2.rs"

[[test]]
name = "test_exercise12_5"
path = "tests/Chap12/test_exercise12_5.rs"

[[test]]
name = "TestMathSeq"
path = "tests/Chap17/TestMathSeq.rs"

[[test]]
name = "TestArraySeq"
path = "tests/Chap18/TestArraySeq.rs"

[[test]]
name = "TestArraySeqMtPer"
path = "tests/Chap18/TestArraySeqMtPer.rs"

[[test]]
name = "TestArraySeqMtEph"
path = "tests/Chap18/TestArraySeqMtEph.rs"

[[test]]
name = "TestChap18ArraySeqMtEphSlice"
path = "tests/Chap18/TestArraySeqMtEphSlice.rs"

[[test]]
name = "TestArraySeqStEph"
path = "tests/Chap18/TestArraySeqStEph.rs"

[[test]]
name = "TestArraySeqStPer"
path = "tests/Chap18/TestArraySeqStPer.rs"

[[test]]
name = "TestLinkedListStEph"
path = "tests/Chap18/TestLinkedListStEph.rs"

[[test]]
name = "TestLinkedListStPer"
path = "tests/Chap18/TestLinkedListStPer.rs"

[[test]]
name = "TestChap19ArraySeqStEph"
path = "tests/Chap19/TestArraySeqStEph.rs"

[[test]]
name = "TestChap19ArraySeqStPer"
path = "tests/Chap19/TestArraySeqStPer.rs"

[[test]]
name = "TestChap19ArraySeqMtEph"
path = "tests/Chap19/TestArraySeqMtEph.rs"

[[test]]
name = "TestChap19ArraySeqMtEphSlice"
path = "tests/Chap19/TestArraySeqMtEphSlice.rs"

[[test]]
name = "TestChap21"
path = "tests/Chap21/TestChap21.rs"

[[test]]
name = "TestBalBinTreeStEph"
path = "tests/Chap23/TestBalBinTreeStEph.rs"

[[test]]
name = "TestPrimTreeSeqStPer"
path = "tests/Chap23/TestPrimTreeSeqStPer.rs"

[[test]]
name = "TestDivConReduceStPer"
path = "tests/Chap26/TestDivConReduceStPer.rs"

[[test]]
name = "TestMergeSortStPer"
path = "tests/Chap26/TestMergeSortStPer.rs"

[[test]]
name = "TestDivConReduceMtPer"
path = "tests/Chap26/TestDivConReduceMtPer.rs"

[[test]]
name = "TestMergeSortMtPer"
path = "tests/Chap26/TestMergeSortMtPer.rs"

[[test]]
name = "TestScanDCStPer"
path = "tests/Chap26/TestScanDCStPer.rs"

[[test]]
name = "TestScanDCMtPer"
path = "tests/Chap26/TestScanDCMtPer.rs"

[[test]]
name = "TestETSPStEph"
path = "tests/Chap26/TestETSPStEph.rs"

[[test]]
name = "TestETSPMtEph"
path = "tests/Chap26/TestETSPMtEph.rs"

[[test]]
name = "TestReduceContractStEph"
path = "tests/Chap27/TestReduceContractStEph.rs"

[[test]]
name = "TestReduceContractMtEph"
path = "tests/Chap27/TestReduceContractMtEph.rs"

[[test]]
name = "TestScanContractStEph"
path = "tests/Chap27/TestScanContractStEph.rs"

[[test]]
name = "TestScanContractMtEph"
path = "tests/Chap27/TestScanContractMtEph.rs"

# Standards tests
[[test]]
name = "Testmod_standard"
path = "tests/standards/Testmod_standard.rs"

[[test]]
name = "Testview_standard"
path = "tests/standards/Testview_standard.rs"

[[test]]
name = "Testdeep_view_standard"
path = "tests/standards/Testdeep_view_standard.rs"

[[test]]
name = "Testiterators_standard"
path = "tests/standards/Testiterators_standard.rs"

[[test]]
name = "Testmut_standard"
path = "tests/standards/Testmut_standard.rs"

[[test]]
name = "Testmulti_struct_standard"
path = "tests/standards/Testmulti_struct_standard.rs"

[[test]]
name = "Testtable_of_contents_standard"
path = "tests/standards/Testtable_of_contents_standard.rs"

[[test]]
name = "Testusing_closures_standard"
path = "tests/standards/Testusing_closures_standard.rs"

[[test]]
name = "Testwrapping_iterators_standard"
path = "tests/standards/Testwrapping_iterators_standard.rs"

[[test]]
name = "Testtoplevel_coarse_rwlocks_for_mt_modules"
path = "tests/standards/Testtoplevel_coarse_rwlocks_for_mt_modules.rs"

[[test]]
name = "Testspec_naming_convention"
path = "tests/standards/Testspec_naming_convention.rs"

## Testrwlock_standard moved to attic
## Testarc_standard moved to attic

# Experiments removed - use verus-proof-time-testing project instead
# [[test]]
# name = "test_verify_harness"
# path = "tests/experiments/test_verify_harness.rs"

# [[test]]
# name = "TestVerusKeepGhostAndTest"
# path = "tests/experiments/TestVerusKeepGhostAndTest.rs"

# [[test]]
# name = "TestDeriveClone"
# path = "tests/experiments/TestDeriveClone.rs"

# [[test]]
# name = "TestDeriveCopy"
# path = "tests/experiments/TestDeriveCopy.rs"

# [[test]]
# name = "TestDeriveDebug"
# path = "tests/experiments/TestDeriveDebug.rs"

# [[test]]
# name = "TestDeriveDefault"
# path = "tests/experiments/TestDeriveDefault.rs"

# [[test]]
# name = "TestDeriveEq"
# path = "tests/experiments/TestDeriveEq.rs"

# [[test]]
# name = "TestDeriveHash"
# path = "tests/experiments/TestDeriveHash.rs"

# [[test]]
# name = "TestDerivePartialEq"
# path = "tests/experiments/TestDerivePartialEq.rs"

# [[test]]
# name = "TestDerivePartialOrd"
# path = "tests/experiments/TestDerivePartialOrd.rs"

# [[test]]
# name = "TestDeriveOrd"
# path = "tests/experiments/TestDeriveOrd.rs"

[[bench]]
name = "BenchInsertionSortStEph"
path = "benches/Chap03/BenchInsertionSortStEph.rs"
harness = false

[[bench]]
name = "BenchKleeneStPer"
path = "benches/Chap05/BenchKleeneStPer.rs"
harness = false

[[bench]]
name = "BenchMappingStEph"
path = "benches/Chap05/BenchMappingStEph.rs"
harness = false

[[bench]]
name = "BenchRelationStEph"
path = "benches/Chap05/BenchRelationStEph.rs"
harness = false

[[bench]]
name = "BenchSetStEph"
path = "benches/Chap05/BenchSetStEph.rs"
harness = false

[[bench]]
name = "BenchDirGraphStEph"
path = "benches/Chap06/BenchDirGraphStEph.rs"
harness = false

[[bench]]
name = "BenchWeightedDirGraphStEph"
path = "benches/Chap06/BenchWeightedDirGraphStEph.rs"
harness = false

[[bench]]
name = "BenchFibonacciStEph"
path = "benches/Chap11/BenchFibonacciStEph.rs"
harness = false

[[bench]]
name = "BenchLinkedListStEph"
path = "benches/Chap18/BenchLinkedListStEph.rs"
harness = false

[[bench]]
name = "BenchLinkedListStPer"
path = "benches/Chap18/BenchLinkedListStPer.rs"
harness = false

[[bench]]
name = "BenchArraySeqStEph"
path = "benches/Chap19/BenchArraySeqStEph.rs"
harness = false

[[bench]]
name = "BenchAlgorithm21"
path = "benches/Chap21/BenchAlgorithm21.rs"
harness = false

[[bench]]
name = "BenchBalBinTreeStEph"
path = "benches/Chap23/BenchBalBinTreeStEph.rs"
harness = false

[[bench]]
name = "BenchPrimTreeSeqStPer"
path = "benches/Chap23/BenchPrimTreeSeqStPer.rs"
harness = false

[[bench]]
name = "BenchDivConReduceStPer"
path = "benches/Chap26/BenchDivConReduceStPer.rs"
harness = false

[[bench]]
name = "BenchETSPStEph"
path = "benches/Chap26/BenchETSPStEph.rs"
harness = false

[[bench]]
name = "BenchMergeSortStPer"
path = "benches/Chap26/BenchMergeSortStPer.rs"
harness = false

[[bench]]
name = "BenchScanDCStPer"
path = "benches/Chap26/BenchScanDCStPer.rs"
harness = false

[[bench]]
name = "BenchReduceContractMtEph"
path = "benches/Chap27/BenchReduceContractMtEph.rs"
harness = false

[[bench]]
name = "BenchReduceContractStEph"
path = "benches/Chap27/BenchReduceContractStEph.rs"
harness = false

[[bench]]
name = "BenchScanContractMtEph"
path = "benches/Chap27/BenchScanContractMtEph.rs"
harness = false

[[bench]]
name = "BenchScanContractStEph"
path = "benches/Chap27/BenchScanContractStEph.rs"
harness = false

[[bench]]
name = "BenchMaxContigSubSumBruteStEph"
path = "benches/Chap28/BenchMaxContigSubSumBruteStEph.rs"
harness = false

[[bench]]
name = "BenchMaxContigSubSumDivConStEph"
path = "benches/Chap28/BenchMaxContigSubSumDivConStEph.rs"
harness = false

[[bench]]
name = "BenchMaxContigSubSumIterStEph"
path = "benches/Chap28/BenchMaxContigSubSumIterStEph.rs"
harness = false

[[bench]]
name = "BenchMaxContigSubSumMtEph"
path = "benches/Chap28/BenchMaxContigSubSumMtEph.rs"
harness = false

[[bench]]
name = "BenchMaxContigSubSumOptStEph"
path = "benches/Chap28/BenchMaxContigSubSumOptStEph.rs"
harness = false

[[bench]]
name = "BenchMaxContigSubSumReducedStEph"
path = "benches/Chap28/BenchMaxContigSubSumReducedStEph.rs"
harness = false

[[bench]]
name = "BenchOrderStatSelectStEph"
path = "benches/Chap35/BenchOrderStatSelectStEph.rs"
harness = false

[[bench]]
name = "BenchQuickSortMtEph"
path = "benches/Chap36/BenchQuickSortMtEph.rs"
harness = false

[[bench]]
name = "BenchQuickSortStEph"
path = "benches/Chap36/BenchQuickSortStEph.rs"
harness = false

[[bench]]
name = "BenchAVLTreeSeqMtPer"
path = "benches/Chap37/BenchAVLTreeSeqMtPer.rs"
harness = false

[[bench]]
name = "BenchAVLTreeSeqStEph"
path = "benches/Chap37/BenchAVLTreeSeqStEph.rs"
harness = false

[[bench]]
name = "BenchAVLTreeSeqStPer"
path = "benches/Chap37/BenchAVLTreeSeqStPer.rs"
harness = false

[[bench]]
name = "BenchBSTAVLMtEph"
path = "benches/Chap37/BenchBSTAVLMtEph.rs"
harness = false

[[bench]]
name = "BenchBSTAVLStEph"
path = "benches/Chap37/BenchBSTAVLStEph.rs"
harness = false

[[bench]]
name = "BenchBSTBBAlphaMtEph"
path = "benches/Chap37/BenchBSTBBAlphaMtEph.rs"
harness = false

[[bench]]
name = "BenchBSTBBAlphaStEph"
path = "benches/Chap37/BenchBSTBBAlphaStEph.rs"
harness = false

[[bench]]
name = "BenchBSTPlainMtEph"
path = "benches/Chap37/BenchBSTPlainMtEph.rs"
harness = false

[[bench]]
name = "BenchBSTPlainStEph"
path = "benches/Chap37/BenchBSTPlainStEph.rs"
harness = false

[[bench]]
name = "BenchBSTRBMtEph"
path = "benches/Chap37/BenchBSTRBMtEph.rs"
harness = false

[[bench]]
name = "BenchBSTRBStEph"
path = "benches/Chap37/BenchBSTRBStEph.rs"
harness = false

[[bench]]
name = "BenchBSTSetAVLMtEph"
path = "benches/Chap37/BenchBSTSetAVLMtEph.rs"
harness = false

[[bench]]
name = "BenchBSTSetBBAlphaMtEph"
path = "benches/Chap37/BenchBSTSetBBAlphaMtEph.rs"
harness = false

[[bench]]
name = "BenchBSTSetPlainMtEph"
path = "benches/Chap37/BenchBSTSetPlainMtEph.rs"
harness = false

[[bench]]
name = "BenchBSTSetRBMtEph"
path = "benches/Chap37/BenchBSTSetRBMtEph.rs"
harness = false

[[bench]]
name = "BenchBSTSetSplayMtEph"
path = "benches/Chap37/BenchBSTSetSplayMtEph.rs"
harness = false

[[bench]]
name = "BenchBSTSplayMtEph"
path = "benches/Chap37/BenchBSTSplayMtEph.rs"
harness = false

[[bench]]
name = "BenchBSTSplayStEph"
path = "benches/Chap37/BenchBSTSplayStEph.rs"
harness = false

[[bench]]
name = "BenchBSTParaMtEph"
path = "benches/Chap38/BenchBSTParaMtEph.rs"
harness = false

[[bench]]
name = "BenchBSTParaStEph"
path = "benches/Chap38/BenchBSTParaStEph.rs"
harness = false

[[bench]]
name = "BenchBSTSetTreapMtEph"
path = "benches/Chap39/BenchBSTSetTreapMtEph.rs"
harness = false

[[bench]]
name = "BenchBSTTreapMtEph"
path = "benches/Chap39/BenchBSTTreapMtEph.rs"
harness = false

[[bench]]
name = "BenchBSTTreapStEph"
path = "benches/Chap39/BenchBSTTreapStEph.rs"
harness = false

[[bench]]
name = "BenchBSTKeyValueStEph"
path = "benches/Chap40/BenchBSTKeyValueStEph.rs"
harness = false

[[bench]]
name = "BenchBSTSizeStEph"
path = "benches/Chap40/BenchBSTSizeStEph.rs"
harness = false

[[bench]]
name = "BenchArraySetEnumMtEph"
path = "benches/Chap41/BenchArraySetEnumMtEph.rs"
harness = false

[[bench]]
name = "BenchArraySetStEph"
path = "benches/Chap41/BenchArraySetStEph.rs"
harness = false

[[bench]]
name = "BenchAVLTreeSetMtEph"
path = "benches/Chap41/BenchAVLTreeSetMtEph.rs"
harness = false

[[bench]]
name = "BenchAVLTreeSetMtPer"
path = "benches/Chap41/BenchAVLTreeSetMtPer.rs"
harness = false

[[bench]]
name = "BenchAVLTreeSetStEph"
path = "benches/Chap41/BenchAVLTreeSetStEph.rs"
harness = false

[[bench]]
name = "BenchAVLTreeSetStPer"
path = "benches/Chap41/BenchAVLTreeSetStPer.rs"
harness = false

[[bench]]
name = "BenchTableMtEph"
path = "benches/Chap42/BenchTableMtEph.rs"
harness = false

[[bench]]
name = "BenchTableStEph"
path = "benches/Chap42/BenchTableStEph.rs"
harness = false

[[bench]]
name = "BenchTableStPer"
path = "benches/Chap42/BenchTableStPer.rs"
harness = false

[[bench]]
name = "BenchAugOrderedTableMtEph"
path = "benches/Chap43/BenchAugOrderedTableMtEph.rs"
harness = false

[[bench]]
name = "BenchAugOrderedTableStEph"
path = "benches/Chap43/BenchAugOrderedTableStEph.rs"
harness = false

[[bench]]
name = "BenchAugOrderedTableStPer"
path = "benches/Chap43/BenchAugOrderedTableStPer.rs"
harness = false

[[bench]]
name = "BenchOrderedSetMtEph"
path = "benches/Chap43/BenchOrderedSetMtEph.rs"
harness = false

[[bench]]
name = "BenchOrderedSetStEph"
path = "benches/Chap43/BenchOrderedSetStEph.rs"
harness = false

[[bench]]
name = "BenchOrderedSetStPer"
path = "benches/Chap43/BenchOrderedSetStPer.rs"
harness = false

[[bench]]
name = "BenchOrderedTableMtEph"
path = "benches/Chap43/BenchOrderedTableMtEph.rs"
harness = false

[[bench]]
name = "BenchOrderedTableMtPer"
path = "benches/Chap43/BenchOrderedTableMtPer.rs"
harness = false

[[bench]]
name = "BenchOrderedTableStEph"
path = "benches/Chap43/BenchOrderedTableStEph.rs"
harness = false

[[bench]]
name = "BenchOrderedTableStPer"
path = "benches/Chap43/BenchOrderedTableStPer.rs"
harness = false

[[bench]]
name = "BenchDocumentIndex"
path = "benches/Chap44/BenchDocumentIndex.rs"
harness = false

[[bench]]
name = "BenchBalancedTreePQ"
path = "benches/Chap45/BenchBalancedTreePQ.rs"
harness = false

[[bench]]
name = "BenchBinaryHeapPQ"
path = "benches/Chap45/BenchBinaryHeapPQ.rs"
harness = false

[[bench]]
name = "BenchLeftistHeapPQ"
path = "benches/Chap45/BenchLeftistHeapPQ.rs"
harness = false

[[bench]]
name = "BenchSortedListPQ"
path = "benches/Chap45/BenchSortedListPQ.rs"
harness = false

[[bench]]
name = "BenchUnsortedListPQ"
path = "benches/Chap45/BenchUnsortedListPQ.rs"
harness = false

[[bench]]
name = "BenchDoubleHashFlatHashTable"
path = "benches/Chap47/BenchDoubleHashFlatHashTable.rs"
harness = false

[[bench]]
name = "BenchLinkedListChainedHashTable"
path = "benches/Chap47/BenchLinkedListChainedHashTable.rs"
harness = false

[[bench]]
name = "BenchLinProbFlatHashTable"
path = "benches/Chap47/BenchLinProbFlatHashTable.rs"
harness = false

[[bench]]
name = "BenchQuadProbFlatHashTable"
path = "benches/Chap47/BenchQuadProbFlatHashTable.rs"
harness = false

[[bench]]
name = "BenchVecChainedHashTable"
path = "benches/Chap47/BenchVecChainedHashTable.rs"
harness = false

[[bench]]
name = "BenchMinEditDistStEph"
path = "benches/Chap49/BenchMinEditDistStEph.rs"
harness = false

[[bench]]
name = "BenchMinEditDistStPer"
path = "benches/Chap49/BenchMinEditDistStPer.rs"
harness = false

[[bench]]
name = "BenchSubsetSumStEph"
path = "benches/Chap49/BenchSubsetSumStEph.rs"
harness = false

[[bench]]
name = "BenchSubsetSumStPer"
path = "benches/Chap49/BenchSubsetSumStPer.rs"
harness = false

[[bench]]
name = "BenchMatrixChainStEph"
path = "benches/Chap50/BenchMatrixChainStEph.rs"
harness = false

[[bench]]
name = "BenchMatrixChainStPer"
path = "benches/Chap50/BenchMatrixChainStPer.rs"
harness = false

[[bench]]
name = "BenchOptBinSearchTreeStEph"
path = "benches/Chap50/BenchOptBinSearchTreeStEph.rs"
harness = false

[[bench]]
name = "BenchOptBinSearchTreeStPer"
path = "benches/Chap50/BenchOptBinSearchTreeStPer.rs"
harness = false

[[bench]]
name = "BenchBottomUpDPMtEph"
path = "benches/Chap51/BenchBottomUpDPMtEph.rs"
harness = false

[[bench]]
name = "BenchBottomUpDPMtPer"
path = "benches/Chap51/BenchBottomUpDPMtPer.rs"
harness = false

[[bench]]
name = "BenchBottomUpDPStEph"
path = "benches/Chap51/BenchBottomUpDPStEph.rs"
harness = false

[[bench]]
name = "BenchBottomUpDPStPer"
path = "benches/Chap51/BenchBottomUpDPStPer.rs"
harness = false

[[bench]]
name = "BenchTopDownDPMtEph"
path = "benches/Chap51/BenchTopDownDPMtEph.rs"
harness = false

[[bench]]
name = "BenchTopDownDPMtPer"
path = "benches/Chap51/BenchTopDownDPMtPer.rs"
harness = false

[[bench]]
name = "BenchTopDownDPStEph"
path = "benches/Chap51/BenchTopDownDPStEph.rs"
harness = false

[[bench]]
name = "BenchTopDownDPStPer"
path = "benches/Chap51/BenchTopDownDPStPer.rs"
harness = false

[[bench]]
name = "BenchAdjMatrixGraphMtEph"
path = "benches/Chap52/BenchAdjMatrixGraphMtEph.rs"
harness = false

[[bench]]
name = "BenchAdjMatrixGraphMtPer"
path = "benches/Chap52/BenchAdjMatrixGraphMtPer.rs"
harness = false

[[bench]]
name = "BenchAdjMatrixGraphStEph"
path = "benches/Chap52/BenchAdjMatrixGraphStEph.rs"
harness = false

[[bench]]
name = "BenchAdjMatrixGraphStPer"
path = "benches/Chap52/BenchAdjMatrixGraphStPer.rs"
harness = false

[[bench]]
name = "BenchAdjSeqGraphMtEph"
path = "benches/Chap52/BenchAdjSeqGraphMtEph.rs"
harness = false

[[bench]]
name = "BenchAdjSeqGraphMtPer"
path = "benches/Chap52/BenchAdjSeqGraphMtPer.rs"
harness = false

[[bench]]
name = "BenchAdjSeqGraphStEph"
path = "benches/Chap52/BenchAdjSeqGraphStEph.rs"
harness = false

[[bench]]
name = "BenchAdjSeqGraphStPer"
path = "benches/Chap52/BenchAdjSeqGraphStPer.rs"
harness = false

[[bench]]
name = "BenchAdjTableGraphMtPer"
path = "benches/Chap52/BenchAdjTableGraphMtPer.rs"
harness = false

[[bench]]
name = "BenchAdjTableGraphStEph"
path = "benches/Chap52/BenchAdjTableGraphStEph.rs"
harness = false

[[bench]]
name = "BenchAdjTableGraphStPer"
path = "benches/Chap52/BenchAdjTableGraphStPer.rs"
harness = false

[[bench]]
name = "BenchEdgeSetGraphMtPer"
path = "benches/Chap52/BenchEdgeSetGraphMtPer.rs"
harness = false

[[bench]]
name = "BenchEdgeSetGraphStEph"
path = "benches/Chap52/BenchEdgeSetGraphStEph.rs"
harness = false

[[bench]]
name = "BenchEdgeSetGraphStPer"
path = "benches/Chap52/BenchEdgeSetGraphStPer.rs"
harness = false

[[bench]]
name = "BenchBFSMtEph"
path = "benches/Chap54/BenchBFSMtEph.rs"
harness = false

[[bench]]
name = "BenchBFSMtPer"
path = "benches/Chap54/BenchBFSMtPer.rs"
harness = false

[[bench]]
name = "BenchBFSStEph"
path = "benches/Chap54/BenchBFSStEph.rs"
harness = false

[[bench]]
name = "BenchBFSStPer"
path = "benches/Chap54/BenchBFSStPer.rs"
harness = false

[[bench]]
name = "BenchCycleDetectStEph"
path = "benches/Chap55/BenchCycleDetectStEph.rs"
harness = false

[[bench]]
name = "BenchCycleDetectStPer"
path = "benches/Chap55/BenchCycleDetectStPer.rs"
harness = false

[[bench]]
name = "BenchDFSStEph"
path = "benches/Chap55/BenchDFSStEph.rs"
harness = false

[[bench]]
name = "BenchDFSStPer"
path = "benches/Chap55/BenchDFSStPer.rs"
harness = false

[[bench]]
name = "BenchSCCStEph"
path = "benches/Chap55/BenchSCCStEph.rs"
harness = false

[[bench]]
name = "BenchSCCStPer"
path = "benches/Chap55/BenchSCCStPer.rs"
harness = false

[[bench]]
name = "BenchTopoSortStEph"
path = "benches/Chap55/BenchTopoSortStEph.rs"
harness = false

[[bench]]
name = "BenchTopoSortStPer"
path = "benches/Chap55/BenchTopoSortStPer.rs"
harness = false

[[bench]]
name = "BenchDijkstraStEphU64"
path = "benches/Chap57/BenchDijkstraStEphU64.rs"
harness = false

[[bench]]
name = "BenchBellmanFordStEphI64"
path = "benches/Chap58/BenchBellmanFordStEphI64.rs"
harness = false

[[bench]]
name = "BenchJohnsonMtEphI64"
path = "benches/Chap59/BenchJohnsonMtEphI64.rs"
harness = false

[[bench]]
name = "BenchJohnsonStEphI64"
path = "benches/Chap59/BenchJohnsonStEphI64.rs"
harness = false

[[bench]]
name = "BenchEdgeContractionMtEph"
path = "benches/Chap61/BenchEdgeContractionMtEph.rs"
harness = false

[[bench]]
name = "BenchEdgeContractionStEph"
path = "benches/Chap61/BenchEdgeContractionStEph.rs"
harness = false

[[bench]]
name = "BenchVertexMatchingMtEph"
path = "benches/Chap61/BenchVertexMatchingMtEph.rs"
harness = false

[[bench]]
name = "BenchVertexMatchingStEph"
path = "benches/Chap61/BenchVertexMatchingStEph.rs"
harness = false

[[bench]]
name = "BenchStarContractionMtEph"
path = "benches/Chap62/BenchStarContractionMtEph.rs"
harness = false

[[bench]]
name = "BenchStarContractionStEph"
path = "benches/Chap62/BenchStarContractionStEph.rs"
harness = false

[[bench]]
name = "BenchStarPartitionMtEph"
path = "benches/Chap62/BenchStarPartitionMtEph.rs"
harness = false

[[bench]]
name = "BenchStarPartitionStEph"
path = "benches/Chap62/BenchStarPartitionStEph.rs"
harness = false

[[bench]]
name = "BenchConnectivityMtEph"
path = "benches/Chap63/BenchConnectivityMtEph.rs"
harness = false

[[bench]]
name = "BenchConnectivityStEph"
path = "benches/Chap63/BenchConnectivityStEph.rs"
harness = false

[[bench]]
name = "BenchSpanTreeMtEph"
path = "benches/Chap64/BenchSpanTreeMtEph.rs"
harness = false

[[bench]]
name = "BenchSpanTreeStEph"
path = "benches/Chap64/BenchSpanTreeStEph.rs"
harness = false

[[bench]]
name = "BenchKruskalStEph"
path = "benches/Chap65/BenchKruskalStEph.rs"
harness = false

[[bench]]
name = "BenchPrimStEph"
path = "benches/Chap65/BenchPrimStEph.rs"
harness = false

[[bench]]
name = "BenchUnionFindArrayStEph"
path = "benches/Chap65/BenchUnionFindArrayStEph.rs"
harness = false

[[bench]]
name = "BenchUnionFindNoPCStEph"
path = "benches/Chap65/BenchUnionFindNoPCStEph.rs"
harness = false

[[bench]]
name = "BenchUnionFindPCStEph"
path = "benches/Chap65/BenchUnionFindPCStEph.rs"
harness = false

[[bench]]
name = "BenchBoruvkaMtEph"
path = "benches/Chap66/BenchBoruvkaMtEph.rs"
harness = false

[[bench]]
name = "BenchBoruvkaStEph"
path = "benches/Chap66/BenchBoruvkaStEph.rs"
harness = false

[[bench]]
name = "BenchSetMtEph"
path = "benches/Chap05/BenchSetMtEph.rs"
harness = false

[[bench]]
name = "BenchDirGraphMtEph"
path = "benches/Chap06/BenchDirGraphMtEph.rs"
harness = false

[[bench]]
name = "BenchUnDirGraphStEph"
path = "benches/Chap06/BenchUnDirGraphStEph.rs"
harness = false

[[bench]]
name = "BenchUnDirGraphMtEph"
path = "benches/Chap06/BenchUnDirGraphMtEph.rs"
harness = false

[[bench]]
name = "BenchLabDirGraphStEph"
path = "benches/Chap06/BenchLabDirGraphStEph.rs"
harness = false

[[bench]]
name = "BenchLabDirGraphMtEph"
path = "benches/Chap06/BenchLabDirGraphMtEph.rs"
harness = false

[[bench]]
name = "BenchLabUnDirGraphStEph"
path = "benches/Chap06/BenchLabUnDirGraphStEph.rs"
harness = false

[[bench]]
name = "BenchLabUnDirGraphMtEph"
path = "benches/Chap06/BenchLabUnDirGraphMtEph.rs"
harness = false

[[bench]]
name = "BenchChap18ArraySeqStEph"
path = "benches/Chap18/BenchChap18ArraySeqStEph.rs"
harness = false

[[bench]]
name = "BenchChap18ArraySeqMtEph"
path = "benches/Chap18/BenchChap18ArraySeqMtEph.rs"
harness = false

[[bench]]
name = "BenchChap18ArraySeqMtEphSlice"
path = "benches/Chap18/BenchChap18ArraySeqMtEphSlice.rs"
harness = false

[[bench]]
name = "BenchChap18ArraySeqStPer"
path = "benches/Chap18/BenchChap18ArraySeqStPer.rs"
harness = false

[[bench]]
name = "BenchChap18ArraySeqMtPer"
path = "benches/Chap18/BenchChap18ArraySeqMtPer.rs"
harness = false

[[bench]]
name = "BenchArraySeqMtEph"
path = "benches/Chap19/BenchArraySeqMtEph.rs"
harness = false

[[bench]]
name = "BenchArraySeqMtEphSlice"
path = "benches/Chap19/BenchArraySeqMtEphSlice.rs"
harness = false

[[bench]]
name = "BenchArraySeqStPer"
path = "benches/Chap19/BenchArraySeqStPer.rs"
harness = false

[[bench]]
name = "BenchDivConReduceMtPer"
path = "benches/Chap26/BenchDivConReduceMtPer.rs"
harness = false

[[bench]]
name = "BenchETSPMtEph"
path = "benches/Chap26/BenchETSPMtEph.rs"
harness = false

[[bench]]
name = "BenchMergeSortMtPer"
path = "benches/Chap26/BenchMergeSortMtPer.rs"
harness = false

[[bench]]
name = "BenchScanDCMtPer"
path = "benches/Chap26/BenchScanDCMtPer.rs"
harness = false

[[bench]]
name = "BenchMaxContigSubSumDivConOptMtEph"
path = "benches/Chap28/BenchMaxContigSubSumDivConOptMtEph.rs"
harness = false

[[bench]]
name = "BenchMaxContigSubSumDivConOptStEph"
path = "benches/Chap28/BenchMaxContigSubSumDivConOptStEph.rs"
harness = false

[[bench]]
name = "BenchMaxContigSubSumReducedMcsseStEph"
path = "benches/Chap28/BenchMaxContigSubSumReducedMcsseStEph.rs"
harness = false

[[bench]]
name = "BenchOrderStatSelectMtEph"
path = "benches/Chap35/BenchOrderStatSelectMtEph.rs"
harness = false

[[bench]]
name = "BenchOrderStatSelectMtPer"
path = "benches/Chap35/BenchOrderStatSelectMtPer.rs"
harness = false

[[bench]]
name = "BenchOrderStatSelectStPer"
path = "benches/Chap35/BenchOrderStatSelectStPer.rs"
harness = false

[[bench]]
name = "BenchQuickSortMtEphSlice"
path = "benches/Chap36/BenchQuickSortMtEphSlice.rs"
harness = false

[[bench]]
name = "BenchBSTParaTreapMtEph"
path = "benches/Chap39/BenchBSTParaTreapMtEph.rs"
harness = false

[[bench]]
name = "BenchBSTReducedStEph"
path = "benches/Chap40/BenchBSTReducedStEph.rs"
harness = false

[[bench]]
name = "BenchMinEditDistMtEph"
path = "benches/Chap49/BenchMinEditDistMtEph.rs"
harness = false

[[bench]]
name = "BenchMinEditDistMtPer"
path = "benches/Chap49/BenchMinEditDistMtPer.rs"
harness = false

[[bench]]
name = "BenchSubsetSumMtEph"
path = "benches/Chap49/BenchSubsetSumMtEph.rs"
harness = false

[[bench]]
name = "BenchSubsetSumMtPer"
path = "benches/Chap49/BenchSubsetSumMtPer.rs"
harness = false

[[bench]]
name = "BenchMatrixChainMtEph"
path = "benches/Chap50/BenchMatrixChainMtEph.rs"
harness = false

[[bench]]
name = "BenchMatrixChainMtPer"
path = "benches/Chap50/BenchMatrixChainMtPer.rs"
harness = false

[[bench]]
name = "BenchOptBinSearchTreeMtEph"
path = "benches/Chap50/BenchOptBinSearchTreeMtEph.rs"
harness = false

[[bench]]
name = "BenchOptBinSearchTreeMtPer"
path = "benches/Chap50/BenchOptBinSearchTreeMtPer.rs"
harness = false

[[bench]]
name = "BenchGraphSearchStEph"
path = "benches/Chap53/BenchGraphSearchStEph.rs"
harness = false

[[bench]]
name = "BenchGraphSearchStPer"
path = "benches/Chap53/BenchGraphSearchStPer.rs"
harness = false

[[bench]]
name = "BenchGraphSearchMtPer"
path = "benches/Chap53/BenchGraphSearchMtPer.rs"
harness = false

[[bench]]
name = "BenchPQMinStEph"
path = "benches/Chap53/BenchPQMinStEph.rs"
harness = false

[[bench]]
name = "BenchPQMinStPer"
path = "benches/Chap53/BenchPQMinStPer.rs"
harness = false

[[bench]]
name = "BenchDijkstraStEphF64"
path = "benches/Chap57/BenchDijkstraStEphF64.rs"
harness = false

[[bench]]
name = "BenchBellmanFordStEphF64"
path = "benches/Chap58/BenchBellmanFordStEphF64.rs"
harness = false

[[bench]]
name = "BenchJohnsonStEphF64"
path = "benches/Chap59/BenchJohnsonStEphF64.rs"
harness = false

[[bench]]
name = "BenchJohnsonMtEphF64"
path = "benches/Chap59/BenchJohnsonMtEphF64.rs"
harness = false

[[bench]]
name = "BenchTSPApproxStEph"
path = "benches/Chap64/BenchTSPApproxStEph.rs"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
# rust_verify_test_macros requires nightly - use verus-proof-time-testing project instead
# rust_verify_test_macros = { path = "/home/milnes/projects/verus/source/rust_verify_test_macros" }
which = "6"

[profile.release]
incremental = true

[lints.rust]
non_snake_case = "allow"
non_camel_case_types = "allow"
non_upper_case_globals = "allow"
unused_imports = "allow"
unused_variables = "allow"
dead_code = "allow"
unused_parens = "allow"
non_shorthand_field_patterns = "allow"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(verus_keep_ghost)', 'cfg(verus_keep_ghost_body)'] }

[lints.clippy]
module_inception = "allow"
type_complexity = "allow"

[workspace]
members = ["."]

# Use local Verus fork for vstd and state machines (for rust-analyzer navigation)
[patch.crates-io]
vstd = { path = "/home/milnes/projects/verus/source/vstd" }
verus_state_machines_macros = { path = "/home/milnes/projects/verus/source/state_machines_macros" }
[[test]]
name = "TestMaxContigSubSumBruteStEph"
path = "tests/Chap28/TestMaxContigSubSumBruteStEph.rs"

[[test]]
name = "TestMaxContigSubSumDivConMtEph"
path = "tests/Chap28/TestMaxContigSubSumDivConMtEph.rs"

[[test]]
name = "TestMaxContigSubSumDivConOptMtEph"
path = "tests/Chap28/TestMaxContigSubSumDivConOptMtEph.rs"

[[test]]
name = "TestMaxContigSubSumIterStEph"
path = "tests/Chap28/TestMaxContigSubSumIterStEph.rs"

[[test]]
name = "TestMaxContigSubSumReducedMcsseStEph"
path = "tests/Chap28/TestMaxContigSubSumReducedMcsseStEph.rs"

[[test]]
name = "TestMaxContigSubSumDivConOptStEph"
path = "tests/Chap28/TestMaxContigSubSumDivConOptStEph.rs"

[[test]]
name = "TestMaxContigSubSumDivConStEph"
path = "tests/Chap28/TestMaxContigSubSumDivConStEph.rs"

[[test]]
name = "TestMaxContigSubSumOptMtEph"
path = "tests/Chap28/TestMaxContigSubSumOptMtEph.rs"

[[test]]
name = "TestMaxContigSubSumOptStEph"
path = "tests/Chap28/TestMaxContigSubSumOptStEph.rs"

[[test]]
name = "TestMaxContigSubSumReducedStEph"
path = "tests/Chap28/TestMaxContigSubSumReducedStEph.rs"

[[test]]
name = "TestOrderStatSelectMtEph"
path = "tests/Chap35/TestOrderStatSelectMtEph.rs"

[[test]]
name = "TestOrderStatSelectMtPer"
path = "tests/Chap35/TestOrderStatSelectMtPer.rs"

[[test]]
name = "TestOrderStatSelectStEph"
path = "tests/Chap35/TestOrderStatSelectStEph.rs"

[[test]]
name = "TestOrderStatSelectStPer"
path = "tests/Chap35/TestOrderStatSelectStPer.rs"

[[test]]
name = "TestQuickSortMtEph"
path = "tests/Chap36/TestQuickSortMtEph.rs"

[[test]]
name = "TestQuickSortMtEphSlice"
path = "tests/Chap36/TestQuickSortMtEphSlice.rs"

[[test]]
name = "TestQuickSortStEph"
path = "tests/Chap36/TestQuickSortStEph.rs"

[[test]]
name = "BenchQuickSort"
path = "tests/Chap36/BenchQuickSort.rs"

[[test]]
name = "TestAVLTreeSeqMtPer"
path = "tests/Chap37/TestAVLTreeSeqMtPer.rs"

[[test]]
name = "TestAVLTreeSeq"
path = "tests/Chap37/TestAVLTreeSeq.rs"

[[test]]
name = "TestAVLTreeSeqStEph18"
path = "tests/Chap37/TestAVLTreeSeqStEph18.rs"

[[test]]
name = "TestAVLTreeSeqStEphChap37"
path = "tests/Chap37/TestAVLTreeSeqStEphChap37.rs"

[[test]]
name = "TestAVLTreeSeqStEph"
path = "tests/Chap37/TestAVLTreeSeqStEph.rs"

[[test]]
name = "TestAVLTreeSeqStPer18"
path = "tests/Chap37/TestAVLTreeSeqStPer18.rs"

[[test]]
name = "TestAVLTreeSeqStPer19"
path = "tests/Chap37/TestAVLTreeSeqStPer19.rs"

[[test]]
name = "TestAVLTreeSeqStPer"
path = "tests/Chap37/TestAVLTreeSeqStPer.rs"

[[test]]
name = "TestBSTAVLMtEph"
path = "tests/Chap37/TestBSTAVLMtEph.rs"

[[test]]
name = "TestBSTAVLStEph"
path = "tests/Chap37/TestBSTAVLStEph.rs"

[[test]]
name = "TestBSTBBAlphaMtEph"
path = "tests/Chap37/TestBSTBBAlphaMtEph.rs"

[[test]]
name = "TestBSTBBAlphaStEph"
path = "tests/Chap37/TestBSTBBAlphaStEph.rs"

# [[test]]  # module BSTMtEph does not exist
# name = "TestBSTMtEph"
# path = "tests/Chap37/TestBSTMtEph.rs"

[[test]]
name = "TestBSTPlainMtEph"
path = "tests/Chap37/TestBSTPlainMtEph.rs"

[[test]]
name = "TestBSTPlainStEph"
path = "tests/Chap37/TestBSTPlainStEph.rs"

[[test]]
name = "TestBSTRBMtEph"
path = "tests/Chap37/TestBSTRBMtEph.rs"

[[test]]
name = "TestBSTRBStEph"
path = "tests/Chap37/TestBSTRBStEph.rs"

[[test]]
name = "TestBSTSetAVLMtEph"
path = "tests/Chap37/TestBSTSetAVLMtEph.rs"

[[test]]
name = "TestBSTSetBBAlphaMtEph"
path = "tests/Chap37/TestBSTSetBBAlphaMtEph.rs"

[[test]]
name = "TestBSTSetPlainMtEph"
path = "tests/Chap37/TestBSTSetPlainMtEph.rs"

[[test]]
name = "TestBSTSetRBMtEph"
path = "tests/Chap37/TestBSTSetRBMtEph.rs"

[[test]]
name = "TestBSTSetSplayMtEph"
path = "tests/Chap37/TestBSTSetSplayMtEph.rs"

[[test]]
name = "TestBSTSplayMtEph"
path = "tests/Chap37/TestBSTSplayMtEph.rs"

[[test]]
name = "TestBSTSplayStEph"
path = "tests/Chap37/TestBSTSplayStEph.rs"

[[test]]
name = "TestBSTParaMtEph"
path = "tests/Chap38/TestBSTParaMtEph.rs"

[[test]]
name = "TestBSTParaStEph"
path = "tests/Chap38/TestBSTParaStEph.rs"

[[test]]
name = "TestOrdKeyMap"
path = "tests/Chap41/TestOrdKeyMap.rs"

[[test]]
name = "TestBSTParaTreapMtEph"
path = "tests/Chap39/TestBSTParaTreapMtEph.rs"

[[test]]
name = "TestBSTSetTreapMtEph"
path = "tests/Chap39/TestBSTSetTreapMtEph.rs"

[[test]]
name = "TestBSTTreapMtEph"
path = "tests/Chap39/TestBSTTreapMtEph.rs"

[[test]]
name = "TestBSTTreapStEph"
path = "tests/Chap39/TestBSTTreapStEph.rs"

[[test]]
name = "TestBSTKeyValueStEph"
path = "tests/Chap40/TestBSTKeyValueStEph.rs"

[[test]]
name = "TestBSTReducedStEph"
path = "tests/Chap40/TestBSTReducedStEph.rs"

[[test]]
name = "TestBSTSizeStEph"
path = "tests/Chap40/TestBSTSizeStEph.rs"

[[test]]
name = "TestArraySetEnumMtEph"
path = "tests/Chap41/TestArraySetEnumMtEph.rs"

[[test]]
name = "TestArraySetStEph"
path = "tests/Chap41/TestArraySetStEph.rs"

[[test]]
name = "TestAVLTreeSetMtEph"
path = "tests/Chap41/TestAVLTreeSetMtEph.rs"

[[test]]
name = "TestAVLTreeSetMtPer"
path = "tests/Chap41/TestAVLTreeSetMtPer.rs"

[[test]]
name = "TestAVLTreeSetStEph"
path = "tests/Chap41/TestAVLTreeSetStEph.rs"

[[test]]
name = "TestAVLTreeSetStPer"
path = "tests/Chap41/TestAVLTreeSetStPer.rs"

[[test]]
name = "TestExample41_3"
path = "tests/Chap41/TestExample41_3.rs"

[[test]]
name = "TestExample42_1"
path = "tests/Chap42/TestExample42_1.rs"

[[test]]
name = "TestTableMtEph"
path = "tests/Chap42/TestTableMtEph.rs"

[[test]]
name = "TestTableStEph"
path = "tests/Chap42/TestTableStEph.rs"

[[test]]
name = "TestTableStPer"
path = "tests/Chap42/TestTableStPer.rs"

[[test]]
name = "TestAugOrderedTableMtEph"
path = "tests/Chap43/TestAugOrderedTableMtEph.rs"

[[test]]
name = "TestAugOrderedTableStEph"
path = "tests/Chap43/TestAugOrderedTableStEph.rs"

[[test]]
name = "TestAugOrderedTableStPer"
path = "tests/Chap43/TestAugOrderedTableStPer.rs"

[[test]]
name = "TestExample43_1"
path = "tests/Chap43/TestExample43_1.rs"

[[test]]
name = "TestOrderedSetMtEph"
path = "tests/Chap43/TestOrderedSetMtEph.rs"

[[test]]
name = "TestOrderedSetStEph"
path = "tests/Chap43/TestOrderedSetStEph.rs"

[[test]]
name = "TestOrderedSetStPer"
path = "tests/Chap43/TestOrderedSetStPer.rs"

[[test]]
name = "TestOrderedTableMtEph"
path = "tests/Chap43/TestOrderedTableMtEph.rs"

[[test]]
name = "TestOrderedTableMtPer"
path = "tests/Chap43/TestOrderedTableMtPer.rs"

[[test]]
name = "TestOrderedTableStEph"
path = "tests/Chap43/TestOrderedTableStEph.rs"

[[test]]
name = "TestOrderedTableStPer"
path = "tests/Chap43/TestOrderedTableStPer.rs"

[[test]]
name = "TestDocumentIndex"
path = "tests/Chap44/TestDocumentIndex.rs"

[[test]]
name = "TestExample44_1"
path = "tests/Chap44/TestExample44_1.rs"

[[test]]
name = "TestBalancedTreePQ"
path = "tests/Chap45/TestBalancedTreePQ.rs"

[[test]]
name = "TestBinaryHeapPQ"
path = "tests/Chap45/TestBinaryHeapPQ.rs"

[[test]]
name = "TestExample45_2"
path = "tests/Chap45/TestExample45_2.rs"

[[test]]
name = "TestHeapsortExample"
path = "tests/Chap45/TestHeapsortExample.rs"

[[test]]
name = "TestLeftistHeapPQ"
path = "tests/Chap45/TestLeftistHeapPQ.rs"

[[test]]
name = "TestSortedListPQ"
path = "tests/Chap45/TestSortedListPQ.rs"

[[test]]
name = "TestUnsortedListPQ"
path = "tests/Chap45/TestUnsortedListPQ.rs"

[[test]]
name = "TestDoubleHashFlatHashTable"
path = "tests/Chap47/TestDoubleHashFlatHashTable.rs"

[[test]]
name = "TestLinkedListChainedHashTable"
path = "tests/Chap47/TestLinkedListChainedHashTable.rs"

[[test]]
name = "TestLinProbFlatHashTable"
path = "tests/Chap47/TestLinProbFlatHashTable.rs"

[[test]]
name = "TestParaHashTableStEph"
path = "tests/Chap47/TestParaHashTableStEph.rs"

[[test]]
name = "TestQuadProbFlatHashTable"
path = "tests/Chap47/TestQuadProbFlatHashTable.rs"

[[test]]
name = "TestStructChainedHashTable"
path = "tests/Chap47/TestStructChainedHashTable.rs"

[[test]]
name = "TestVecChainedHashTable"
path = "tests/Chap47/TestVecChainedHashTable.rs"

[[test]]
name = "TestMinEditDistMtEph"
path = "tests/Chap49/TestMinEditDistMtEph.rs"

[[test]]
name = "TestMinEditDistMtPer"
path = "tests/Chap49/TestMinEditDistMtPer.rs"

[[test]]
name = "TestMinEditDistStEph"
path = "tests/Chap49/TestMinEditDistStEph.rs"

[[test]]
name = "TestMinEditDistStPer"
path = "tests/Chap49/TestMinEditDistStPer.rs"

[[test]]
name = "TestSubsetSumMtEph"
path = "tests/Chap49/TestSubsetSumMtEph.rs"

[[test]]
name = "TestSubsetSumMtPer"
path = "tests/Chap49/TestSubsetSumMtPer.rs"

[[test]]
name = "TestSubsetSumStEph"
path = "tests/Chap49/TestSubsetSumStEph.rs"

[[test]]
name = "TestSubsetSumStPer"
path = "tests/Chap49/TestSubsetSumStPer.rs"

[[test]]
name = "TestMatrixChainMtEph"
path = "tests/Chap50/TestMatrixChainMtEph.rs"

[[test]]
name = "TestMatrixChainMtPer"
path = "tests/Chap50/TestMatrixChainMtPer.rs"

[[test]]
name = "TestMatrixChainStEph"
path = "tests/Chap50/TestMatrixChainStEph.rs"

[[test]]
name = "TestMatrixChainStPer"
path = "tests/Chap50/TestMatrixChainStPer.rs"

[[test]]
name = "TestOBSTMtEph"
path = "tests/Chap50/TestOBSTMtEph.rs"

[[test]]
name = "TestOBSTMtPer"
path = "tests/Chap50/TestOBSTMtPer.rs"

[[test]]
name = "TestOptBinSearchTreeStEph"
path = "tests/Chap50/TestOptBinSearchTreeStEph.rs"

[[test]]
name = "TestOptBinSearchTreeStPer"
path = "tests/Chap50/TestOptBinSearchTreeStPer.rs"

[[test]]
name = "TestProbability"
path = "tests/Chap50/TestProbability.rs"

[[test]]
name = "TestBottomUpDPMtEph"
path = "tests/Chap51/TestBottomUpDPMtEph.rs"

[[test]]
name = "TestBottomUpDPMtPer"
path = "tests/Chap51/TestBottomUpDPMtPer.rs"

[[test]]
name = "TestBottomUpDPStEph"
path = "tests/Chap51/TestBottomUpDPStEph.rs"

[[test]]
name = "TestBottomUpDPStPer"
path = "tests/Chap51/TestBottomUpDPStPer.rs"

[[test]]
name = "TestTopDownDPMtEph"
path = "tests/Chap51/TestTopDownDPMtEph.rs"

[[test]]
name = "TestTopDownDPMtPer"
path = "tests/Chap51/TestTopDownDPMtPer.rs"

[[test]]
name = "TestTopDownDPStEph"
path = "tests/Chap51/TestTopDownDPStEph.rs"

[[test]]
name = "TestTopDownDPStPer"
path = "tests/Chap51/TestTopDownDPStPer.rs"

[[test]]
name = "TestAdjMatrixGraphMtPer"
path = "tests/Chap52/TestAdjMatrixGraphMtPer.rs"

[[test]]
name = "TestAdjMatrixGraphStEph"
path = "tests/Chap52/TestAdjMatrixGraphStEph.rs"

[[test]]
name = "TestAdjMatrixGraphStPer"
path = "tests/Chap52/TestAdjMatrixGraphStPer.rs"

[[test]]
name = "TestAdjSeqGraphMtPer"
path = "tests/Chap52/TestAdjSeqGraphMtPer.rs"

[[test]]
name = "TestAdjSeqGraphStEph"
path = "tests/Chap52/TestAdjSeqGraphStEph.rs"

[[test]]
name = "TestAdjSeqGraphStPer"
path = "tests/Chap52/TestAdjSeqGraphStPer.rs"

[[test]]
name = "TestAdjMatrixGraphMtEph"
path = "tests/Chap52/TestAdjMatrixGraphMtEph.rs"

[[test]]
name = "TestAdjSeqGraphMtEph"
path = "tests/Chap52/TestAdjSeqGraphMtEph.rs"

[[test]]
name = "TestAdjTableGraphMtPer"
path = "tests/Chap52/TestAdjTableGraphMtPer.rs"

[[test]]
name = "TestAdjTableGraphStEph"
path = "tests/Chap52/TestAdjTableGraphStEph.rs"

[[test]]
name = "TestAdjTableGraphStPer"
path = "tests/Chap52/TestAdjTableGraphStPer.rs"

[[test]]
name = "TestEdgeSetGraphMtEph"
path = "tests/Chap52/TestEdgeSetGraphMtEph.rs"

[[test]]
name = "TestEdgeSetGraphMtPer"
path = "tests/Chap52/TestEdgeSetGraphMtPer.rs"

[[test]]
name = "TestEdgeSetGraphStEph"
path = "tests/Chap52/TestEdgeSetGraphStEph.rs"

[[test]]
name = "TestEdgeSetGraphStPer"
path = "tests/Chap52/TestEdgeSetGraphStPer.rs"

[[test]]
name = "TestGraphSearchMtPer"
path = "tests/Chap53/TestGraphSearchMtPer.rs"

[[test]]
name = "TestGraphSearchStEph"
path = "tests/Chap53/TestGraphSearchStEph.rs"

[[test]]
name = "TestGraphSearchStPer"
path = "tests/Chap53/TestGraphSearchStPer.rs"

[[test]]
name = "TestPQMinStEph"
path = "tests/Chap53/TestPQMinStEph.rs"

[[test]]
name = "TestPQMinStPer"
path = "tests/Chap53/TestPQMinStPer.rs"

[[test]]
name = "TestBFSMtEph"
path = "tests/Chap54/TestBFSMtEph.rs"

[[test]]
name = "TestBFSMtPer"
path = "tests/Chap54/TestBFSMtPer.rs"

[[test]]
name = "TestBFSStEph"
path = "tests/Chap54/TestBFSStEph.rs"

[[test]]
name = "TestBFSStPer"
path = "tests/Chap54/TestBFSStPer.rs"

[[test]]
name = "TestCycleDetectStEph"
path = "tests/Chap55/TestCycleDetectStEph.rs"

[[test]]
name = "TestCycleDetectStPer"
path = "tests/Chap55/TestCycleDetectStPer.rs"

[[test]]
name = "TestDFSStEph"
path = "tests/Chap55/TestDFSStEph.rs"

[[test]]
name = "TestDFSStPer"
path = "tests/Chap55/TestDFSStPer.rs"

[[test]]
name = "TestSCCStEph"
path = "tests/Chap55/TestSCCStEph.rs"

[[test]]
name = "TestSCCStPer"
path = "tests/Chap55/TestSCCStPer.rs"

[[test]]
name = "TestTopoSortStEph"
path = "tests/Chap55/TestTopoSortStEph.rs"

[[test]]
name = "TestTopoSortStPer"
path = "tests/Chap55/TestTopoSortStPer.rs"

# [[test]]  # references non-existent F64Dist type
# name = "TestAllPairsResultStEphF64"
# path = "tests/Chap56/TestAllPairsResultStEphF64.rs"

[[test]]
name = "TestAllPairsResultStEphI64"
path = "tests/Chap56/TestAllPairsResultStEphI64.rs"

# [[test]]  # references non-existent F64Dist type
# name = "TestAllPairsResultStPerF64"
# path = "tests/Chap56/TestAllPairsResultStPerF64.rs"

[[test]]
name = "TestAllPairsResultStPerI64"
path = "tests/Chap56/TestAllPairsResultStPerI64.rs"

[[test]]
name = "TestExample56_1"
path = "tests/Chap56/TestExample56_1.rs"

[[test]]
name = "TestExample56_3"
path = "tests/Chap56/TestExample56_3.rs"

[[test]]
name = "TestPathWeightUtilsStEph"
path = "tests/Chap56/TestPathWeightUtilsStEph.rs"

[[test]]
name = "TestPathWeightUtilsStPer"
path = "tests/Chap56/TestPathWeightUtilsStPer.rs"

# [[test]]  # references non-existent F64Dist type
# name = "TestSSSPResultStEphF64"
# path = "tests/Chap56/TestSSSPResultStEphF64.rs"

[[test]]
name = "TestSSSPResultStEphI64"
path = "tests/Chap56/TestSSSPResultStEphI64.rs"

# [[test]]  # references non-existent F64Dist type
# name = "TestSSSPResultStPerF64"
# path = "tests/Chap56/TestSSSPResultStPerF64.rs"

[[test]]
name = "TestSSSPResultStPerI64"
path = "tests/Chap56/TestSSSPResultStPerI64.rs"

[[test]]
name = "TestDijkstraStEphF64"
path = "tests/Chap57/TestDijkstraStEphF64.rs"

[[test]]
name = "TestDijkstraStEphU64"
path = "tests/Chap57/TestDijkstraStEphU64.rs"

[[test]]
name = "TestStackStEph"
path = "tests/Chap57/TestStackStEph.rs"

[[test]]
name = "TestBellmanFordStEphF64"
path = "tests/Chap58/TestBellmanFordStEphF64.rs"

[[test]]
name = "TestBellmanFordStEphI64"
path = "tests/Chap58/TestBellmanFordStEphI64.rs"

[[test]]
name = "TestJohnsonMtEphF64"
path = "tests/Chap59/TestJohnsonMtEphF64.rs"

[[test]]
name = "TestJohnsonMtEphI64"
path = "tests/Chap59/TestJohnsonMtEphI64.rs"

[[test]]
name = "TestJohnsonStEphF64"
path = "tests/Chap59/TestJohnsonStEphF64.rs"

[[test]]
name = "TestJohnsonStEphI64"
path = "tests/Chap59/TestJohnsonStEphI64.rs"

[[test]]
name = "TestEdgeContractionMtEph"
path = "tests/Chap61/TestEdgeContractionMtEph.rs"

[[test]]
name = "TestEdgeContractionStEph"
path = "tests/Chap61/TestEdgeContractionStEph.rs"

[[test]]
name = "TestVertexMatchingMtEph"
path = "tests/Chap61/TestVertexMatchingMtEph.rs"

[[test]]
name = "TestVertexMatchingStEph"
path = "tests/Chap61/TestVertexMatchingStEph.rs"

[[test]]
name = "TestStarContractionMtEph"
path = "tests/Chap62/TestStarContractionMtEph.rs"

[[test]]
name = "TestStarContractionStEph"
path = "tests/Chap62/TestStarContractionStEph.rs"

[[test]]
name = "TestStarPartitionMtEph"
path = "tests/Chap62/TestStarPartitionMtEph.rs"

[[test]]
name = "TestStarPartitionStEph"
path = "tests/Chap62/TestStarPartitionStEph.rs"

[[test]]
name = "TestConnectivityMtEph"
path = "tests/Chap63/TestConnectivityMtEph.rs"

[[test]]
name = "TestConnectivityStEph"
path = "tests/Chap63/TestConnectivityStEph.rs"

[[test]]
name = "TestSpanTreeMtEph"
path = "tests/Chap64/TestSpanTreeMtEph.rs"

[[test]]
name = "TestSpanTreeStEph"
path = "tests/Chap64/TestSpanTreeStEph.rs"

# [[test]]  # uses ordered_float (removed crate)
# name = "TestTSPApproxStEph"
# path = "tests/Chap64/TestTSPApproxStEph.rs"

[[test]]
name = "TestKruskalStEph"
path = "tests/Chap65/TestKruskalStEph.rs"

[[test]]
name = "TestPrimStEph"
path = "tests/Chap65/TestPrimStEph.rs"

[[test]]
name = "TestUnionFindArrayStEph"
path = "tests/Chap65/TestUnionFindArrayStEph.rs"

[[test]]
name = "TestUnionFindNoPCStEph"
path = "tests/Chap65/TestUnionFindNoPCStEph.rs"

[[test]]
name = "TestUnionFindPCStEph"
path = "tests/Chap65/TestUnionFindPCStEph.rs"

[[test]]
name = "TestBoruvkaMtEph"
path = "tests/Chap66/TestBoruvkaMtEph.rs"

[[test]]
name = "TestBoruvkaStEph"
path = "tests/Chap66/TestBoruvkaStEph.rs"

